# MetaOpenEnv_MutantHunter

./: .gitignore  BLOG.md  BLOG_DRAFT.md  Dockerfile  Dockerfile.envserver  LICENSE  PROJECT_BLUEPRINT.md  README.md  openenv.yaml  pyproject.toml  requirements.txt
docs/: phase2_self_play.md
evaluation/: __init__.py  adversarial_components.py  component_sanity.py  eval_harness.py  grpo_smoke_run.py  make_plots.py  reward_hacking_tests.py  run_all_layers.py  sanity_ranking.py  zero_shot_distribution.py
final_results/: baseline_heuristic.json  baseline_zeroshot.json  trained_eval.json
scripts/: precompute_baselines.py  probe_summary_richness.py  run_hf_job.sh  run_hf_job_7b.sh  run_hf_job_demo.sh  run_hf_job_fast.sh  run_hf_job_retry.sh  space_run_layers_6_7.sh  submit_hf_job.sh  sync_manifest_from_baselines.py
src/mutant_hunter/: __init__.py  client.py  models.py
src/mutant_hunter/corpus/: __init__.py  baselines.py  manifest.json
src/mutant_hunter/corpus/_baselines/: bloom_filter_lite__bloom_filter_lite.bloom.json  csv_normalizer__csv_normalizer.normalizer.json  interval_tree__interval_tree.tree.json  mini_calendar__mini_calendar.parser.json
src/mutant_hunter/corpus/_local/: __init__.py  pyproject.toml
src/mutant_hunter/corpus/_local/bloom_filter_lite/: __init__.py  bloom.py
src/mutant_hunter/corpus/_local/bloom_filter_lite/tests/: test_bloom.py
src/mutant_hunter/corpus/_local/csv_normalizer/: __init__.py  normalizer.py
src/mutant_hunter/corpus/_local/csv_normalizer/tests/: test_normalizer.py
src/mutant_hunter/corpus/_local/interval_tree/: __init__.py  tree.py
src/mutant_hunter/corpus/_local/interval_tree/tests/: test_tree.py
src/mutant_hunter/corpus/_local/mini_calendar/: __init__.py  parser.py
src/mutant_hunter/corpus/_local/mini_calendar/tests/: test_parser.py
src/mutant_hunter/mutation/: __init__.py  engine.py
src/mutant_hunter/rubric/: __init__.py  compose.py  reward_coverage_delta.py  reward_format.py  reward_mutation_kill.py  reward_no_regression.py  reward_parsimony.py
src/mutant_hunter/safety/: README.md  __init__.py  forbidden_patterns.py  sandbox.py  validators.py
src/mutant_hunter/server/: __init__.py  app.py  mutant_hunter_environment.py
src/mutant_hunter/tasks/: __init__.py
src/mutant_hunter/tasks/seeds/: eval_set_v1.json
src/mutant_hunter/tools/: __init__.py  get_coverage.py  get_mutation_report.py  list_tests.py  read_file.py  run_tests.py
src/mutant_hunter/utils/: __init__.py
tests/: test_env_smoke.py  test_models.py  test_mutation_engine.py  test_rewards.py  test_safety_validators.py  test_sandbox.py
training/: __init__.py  baseline_eval.py  mine_demonstrations.py  prompts.py  smoke_grpo_inference.py  smoke_reward_fn.py  train_grpo.ipynb  train_grpo.py
training/data/: demonstrations.json
