[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutant-hunter-local-corpus"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true
packages = ["mini_calendar", "csv_normalizer", "interval_tree", "bloom_filter_lite"]
